@@ -1,6 +1,9 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.100 2004/10/19 04:06:35 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.101 2004/10/19 04:09:13 zhen Exp $
+
+  19 Oct 2004; John Davis <zhen@gentoo.org> arch/ia64.py:
+  patch from vapier@gentoo.org for bug #68080
 
   19 Oct 2004; John Davis <zhen@gentoo.org> catalyst, files/catalyst.conf,
   livecd/runscript-support/kmerge.sh:
